class Quiz {
  constructor(id, difficulty, questions, name) {
    this.id = id
    this.difficulty = difficulty
    this.questions = questions
    this.name = name
  }
}

module.exports = Quiz
